--- a/Moduo1/Client/MainWindow.xaml
+++ b/Moduo1/Client/MainWindow.xaml
@@ -165,7 +165,7 @@
                                     </TabItem>
                                     <TabItem x:Name="tabItemCompanies" Header="Partner Companies" Height="39">
                                         <Grid Background="#FFF7F7F7">
-                                            <DataGrid x:Name="dataGrid_NotPartnerCompanies" HorizontalAlignment="Left" Margin="10,39,0,0" VerticalAlignment="Top" Height="230" Width="337" Background="#FFDDDDDD"
+                                            <DataGrid x:Name="dataGrid_NotPartnerCompanies" HorizontalAlignment="Left" Margin="10,39,0,0" VerticalAlignment="Top" Height="230" Width="252" Background="#FFDDDDDD"
                                           IsReadOnly="True" CanUserAddRows="False" ItemsSource="{Binding}"
                                           AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserResizeRows="False"
                                           AllowDrop="True"  CanUserSortColumns="False" HorizontalGridLinesBrush="#FF7E97BF"
@@ -184,13 +184,66 @@
                                                 </DataGrid.Columns>
                                             </DataGrid>
                                             <Label Content="Select company and send partnership request:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="337"/>
-                                            <Button x:Name="PartnershipRequestCEO_button" Content="Send" HorizontalAlignment="Left" Margin="133,274,0,0" VerticalAlignment="Top" Width="75" Height="27"/>
-                                            <Grid HorizontalAlignment="Left" Height="291" Margin="369,10,0,0" VerticalAlignment="Top" Width="406" Background="White">
-                                                <Label Content="Ovde treba da smislimo deo za slanje projekata kompanijama itd." HorizontalAlignment="Left" Margin="10,75,0,0" VerticalAlignment="Top" Width="370" Height="37"/>
+                                            <Button x:Name="PartnershipRequestCEO_button" Content="Send partnership request" HorizontalAlignment="Left" Margin="60,274,0,0" VerticalAlignment="Top" Width="147" Height="27" Click="PartnershipRequestCEOButton_Click"/>
+                                            <Grid HorizontalAlignment="Left" Height="291" Margin="285,10,0,0" VerticalAlignment="Top" Width="490" Background="White">
+                                                <DataGrid x:Name="projectsForApprovalDataGrid" HorizontalAlignment="Left" Margin="260,31,0,0" VerticalAlignment="Top" Height="227" Width="220" Background="#FFDDDDDD"
+                                                          IsReadOnly="True" CanUserAddRows="False" ItemsSource="{Binding}"
+                                                          AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserResizeRows="False"
+                                                          AllowDrop="True"  CanUserSortColumns="False" HorizontalGridLinesBrush="#FF7E97BF"
+                                                          VerticalGridLinesBrush="#FF7E97BF" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
+                                                    <DataGrid.RowStyle>
+                                                        <Style TargetType="{x:Type DataGridRow}">
+                                                            <Style.Triggers>
+                                                                <Trigger Property="IsMouseOver" Value="True">
+                                                                    <Setter Property="Background" Value="#ffffe6"/>
+                                                                </Trigger>
+                                                            </Style.Triggers>
+                                                        </Style>
+                                                    </DataGrid.RowStyle>
+                                                    <DataGrid.Columns>
+                                                        <DataGridTextColumn Width="*" Header="Name" Binding="{Binding Name}" Foreground="#FF16253E" FontWeight="Bold"/>
+                                                        <DataGridTextColumn Width="*" Header="StartDate" Binding="{Binding StartDate}" Foreground="#FF16253E" FontWeight="Bold"/>
+                                                        <DataGridTextColumn Width="*" Header="Deadline" Binding="{Binding Deadline}" Foreground="#FF16253E" FontWeight="Bold"/>
+                                                    </DataGrid.Columns>
+                                                </DataGrid>
+                                                <Label Content="Select project and company which will develope that project:" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" Width="386"/>
+                                                <Button x:Name="ProjectRequestButton" Content="Send project" HorizontalAlignment="Left" Margin="197,263,0,0" VerticalAlignment="Top" Width="92" Click="ProjectRequestButton_CLick"/>
+                                                <DataGrid x:Name="WorkCompaniesDataGrid" HorizontalAlignment="Left" Margin="10,31,0,0" VerticalAlignment="Top" Height="227" Width="209" Background="#FFDDDDDD"
+                                                          IsReadOnly="True" CanUserAddRows="False" ItemsSource="{Binding}"
+                                                          AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserResizeRows="False"
+                                                          AllowDrop="True"  CanUserSortColumns="False" HorizontalGridLinesBrush="#FF7E97BF"
+                                                          VerticalGridLinesBrush="#FF7E97BF" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
+                                                    <DataGrid.RowStyle>
+                                                        <Style TargetType="{x:Type DataGridRow}">
+                                                            <Style.Triggers>
+                                                                <Trigger Property="IsMouseOver" Value="True">
+                                                                    <Setter Property="Background" Value="#ffffe6"/>
+                                                                </Trigger>
+                                                            </Style.Triggers>
+                                                        </Style>
+                                                    </DataGrid.RowStyle>
+                                                    <DataGrid.Columns>
+                                                        <DataGridTextColumn Width="*" Header="Name" Binding="{Binding Name}" Foreground="#FF16253E" FontWeight="Bold"/>
+                                                    </DataGrid.Columns>
+                                                </DataGrid>
                                             </Grid>
                                         </Grid>
                                     </TabItem>
                                 </TabControl>
+                            </Grid>
+                        </TabItem>
+                        <TabItem x:Name="PO_Work_TabItem" Header="PO Work" HorizontalAlignment="Right" Width="77" Visibility="Hidden" Height="39" Focusable="True" Margin="-14.6,10,14.4,-9.8">
+                            <Grid Background="#FFF7F7F7" Margin="0,17,0,0" Focusable="True">
+                                <Label x:Name="ProjectNameLabel" Content="Project name: " HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top" Width="83"/>
+                                <Label x:Name="ProjectDescriptionLabel" Content="Description: " HorizontalAlignment="Left" Margin="10,93,0,0" VerticalAlignment="Top" Width="83"/>
+                                <Label x:Name="ProjectStartDateLabel" Content="Start date: " HorizontalAlignment="Left" Margin="10,210,0,0" VerticalAlignment="Top" Width="83"/>
+                                <Label x:Name="ProjectDeadlineLabel" Content="Deadline: " HorizontalAlignment="Left" Margin="10,269,0,0" VerticalAlignment="Top" Width="83"/>
+                                <TextBox x:Name="ProjectNameTextBox" HorizontalAlignment="Left" Height="23" Margin="98,42,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="156"/>
+                                <TextBox x:Name="ProjectDescriptionTextBox" HorizontalAlignment="Left" Height="92" Margin="98,93,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="156"/>
+                                <TextBox x:Name="ProjectStartDateTextBox" HorizontalAlignment="Left" Height="23" Margin="98,210,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="156"/>
+                                <TextBox x:Name="ProjectDeadlineTextBox" HorizontalAlignment="Left" Height="23" Margin="98,269,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="156"/>
+                                <Button x:Name="CreateProjectButton" Content="Create project" HorizontalAlignment="Left" Margin="169,340,0,0" VerticalAlignment="Top" Width="85" Click="CreateProjectButton_Click"/>
+                                <Label x:Name="DateTimeFormatLabel" Content="dd/mm/yyyy" HorizontalAlignment="Left" Margin="259,210,0,0" VerticalAlignment="Top" Width="77"/>
                             </Grid>
                         </TabItem>
                         <TabItem Margin="0,10,-240,-10" HorizontalAlignment="Right" Width="58" Height="39" Focusable="True">
